# N-BEATS-Lightning

./: .gitignore  CLAUDE.md  EXTENSIONS.md  LICENSE  M4 Monthly Example.ipynb  M4-example.ipynb  M4AllBlks.py  M4AllBlks256Basis.py  M4Experiments.py  README.md  TourismExperiments.py  TourismWavelet32Basis.py  TourismWavelet4mult.py  TourismWavelet4mult20stk.py  TourismWavelet4mult20stk32Basis.py  TourismWaveletExperiment.py  all_blocks_examples.py  environment.yml  m4_example.py  monthlyexample.py  nbeats-lightning.py  pyproject.toml  readme.md  requirements.txt  setup.py  simple_example.ipynb  simple_example.py  vae_example.ipynb  vae_example.py
.github/workflows/: python-publish.yml
N-BEATSOriginalPaper/: main.bbl  main.bib  main.tex
NBEATS-Explorations/: SUBMISSION_CHECKLIST.md  paper.md
data/tourism2/: tourism2_revision2.csv
examples/: M4 Monthly Example.ipynb  M4AllBlks.py  TourismAllBlks.py  simple_example.ipynb  utils.py
examples/utils/: utils.py
experiments/: monitor.sh  run_ensemble_experiments.py  run_experiments.py  run_milk_convergence.py  run_milk_convergence_10stack.py  run_milk_sumloss_convergence.py  run_milk_unbalanced_activeg.py  run_unified_benchmark.py
experiments/deprecated_experiments/: run_experiments.py
experiments/results/: block_benchmark_results.csv  convergence_study_v2_results.csv  ensemble_individual_results.csv  ensemble_summary_results.csv
experiments/results/m4/: ablation_results.csv  ablation_results.csv.backup_20260217_170354  block_benchmark_results.csv  block_benchmark_results.csv.backup_20260217_170354  convergence_study_results_v1.csv  ensemble_individual_results.csv  ensemble_individual_results.csv.backup_20260217_170354  ensemble_summary_results.csv  unified_benchmark_results.csv  wavelet_v2_benchmark_results.csv  wavelet_v2_benchmark_results.csv.backup_20260217_170354  wavelet_v3_benchmark_results.csv
experiments/results/milk_convergence/: milk_convergence_results.csv
experiments/results/milk_convergence_10stack/: milk_convergence_10stack_results.csv
experiments/results/milk_sumloss_convergence/: milk_sumloss_convergence_results.csv
experiments/results/traffic/: block_benchmark_results.csv  convergence_study_results_v1.csv
experiments/results/weather/: convergence_study_results_v1.csv
models/: loaders.py  losses.py  nbeats-lightning.py  nbeats.py  utils.py
my_text_env/: pyvenv.cfg
my_text_env/Scripts/: activate  activate.bat
nbeats_lightning/: blocks.py  constants.py  loaders.py  losses.py  nbeats.py
nbeats_lightning/blocks/: aeblocks.py  blocks.py
src/lightningnbeats/: __init__.py  constants.py  loaders.py  losses.py  models.py
src/lightningnbeats/blocks/: blocks.py
src/lightningnbeats/data/: __init__.py  benchmark_dataset.py
src/lightningnbeats/data/M4/: m4dataset.py
src/lightningnbeats/data/Milk/: __init__.py  milk_dataset.py
src/lightningnbeats/data/Tourism/: __init__.py  tourism_dataset.py
src/lightningnbeats/data/Traffic/: __init__.py  traffic_dataset.py
src/lightningnbeats/data/Weather/: __init__.py  weather_dataset.py
src/nbeats_lightning/: __init__.py  loaders.py  models.py
src/nbeats_lightning/data/M4/: __init__.py  m4dataset.py  tools.py
src/nbeatslightning/data/tourism2/: example_submission.csv
tests/: test_blocks.py  test_loaders.py  test_milk_convergence.py  test_models.py
utils/: utils.py
