[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name="lightningnbeats"
version="0.1.2"
authors =[{name="Daniel Byrne",email="realdanielbyrne@icloud.com"}]
description = "PyTorch Lightning implementation of N-BEATS time series forecasting, extended with wavelet basis expansion, autoencoder blocks, and bottleneck architectures beyond the original paper."
requires-python=">=3.12,<3.15"
classifiers=[
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
  "lightning>=2.1.0",
  "matplotlib",
  "numpy",
  "pandas",
  "PyWavelets",
  "scipy",
  "seaborn",
  "tensorboard",
  "torch>=2.1.0",
  "tqdm",
  "ipykernel",
  "ipython",
  "statsmodels"
]
dynamic = ["readme"]

[project.urls]
"Homepage"="https://github.com/realdanielbyrne/N-BEATS-Lightning"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

